samples/_failures_safe/1761698545_fd3de3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54ca49ba.c: In function ‘main’:
./samples/SAFE/__tmp_54ca49ba.c:155:26: error: missing terminating " character
  155 |     mat1.rows = read_int("Enter rows
      |                          ^~~~~~~~~~~
./samples/SAFE/__tmp_54ca49ba.c:155:5: error: expected expression at end of input
  155 |     mat1.rows = read_int("Enter rows
      |     ^~~~
./samples/SAFE/__tmp_54ca49ba.c:155:17: error: too few arguments to function ‘read_int’
  155 |     mat1.rows = read_int("Enter rows
      |                 ^~~~~~~~
./samples/SAFE/__tmp_54ca49ba.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_54ca49ba.c:155:5: error: expected declaration or statement at end of input
  155 |     mat1.rows = read_int("Enter rows
      |     ^~~~
